--- a/5_1_inpecting_and_cleaning_data.ipynb
+++ b/5_1_inpecting_and_cleaning_data.ipynb
@@ -1247,7 +1247,7 @@
     }
    },
    "source": [
-    "I would make would be to change Wiki QID to Wiki_QID. Then maybe to make everything on the same level I would put everything to lowercase. This will help the ULAN header as everything follows a capital letter for each new words. like DisplayName... the D and N are capitalized. ArtistBio is a mess as it is Nationality, BeginDate, and EndDate mushed together. The BeginDate and EndDate can be named to something better like BirthDate and DeathDate."
+    "I would make would be to change Wiki QID to Wiki_QID.  This will help the ULAN header as everything follows a capital letter for each new words. like DisplayName... the D and N are capitalized.  The BeginDate and EndDate can be named to something better like BirthDate and DeathDate. From looking just at the header it looks like the artist bio data needs to be in separate columns as well. But Artist Bio is also not needed either since its components are in separate columns already."
    ]
   },
   {
@@ -1748,7 +1748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are several things to be done with this data set. First the Names with (cm) can be all changed to Names_cm. The parenthesis in Nationality, begindate,Gender, and enddate can be stripped out. Again the Artist Bio is not really needed as it is mushed together data of BeginDate, Enddate, and Nationality. The Seat Heigh column shows to have all null values so maybe its not needed. When doing the describe to look at the statistics I see that everything looks to be good. The only one is the Seat Height column which has zero and NaN in it. It would also be interesting to check out the max numbers for the columns dealing with measurements to see if one painting is a huge outlier or what the big numbers are coming from."
+    "There are several things to be done with this data set. First the Names with (cm) can be all changed to Names_cm. The parenthesis in Nationality, begindate,Gender, and enddate can be stripped out. The Seat Heigh column shows to have all null values so maybe its not needed. When doing the describe to look at the statistics I see that everything looks to be good. The only one is the Seat Height column which has zero and NaN in it. It would also be interesting to check out the max numbers for the columns dealing with measurements to see if one painting is a huge outlier or what the big numbers are coming from. THe nationality, enddate, begindate, and gender break the golden rule. There are multiple values in one spot so those will need to be in separate columns."
    ]
   },
   {
