--- a/5_2_dfply_and_data_cleaning.ipynb
+++ b/5_2_dfply_and_data_cleaning.ipynb
@@ -746,6 +746,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I would say no because they answer the same thing. It their nationality was unkown then they are not application (NaN). It would be redundant to have both values for nationality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Example 2 - Zeros $\\rightarrow$ `np.Nan`\n",
     "\n",
     "Recall that `artists.BeginDate` had lots of zeros"
