--- a/mod_5_HW_cleaning_up_the_MoMA_artwork.ipynb
+++ b/mod_5_HW_cleaning_up_the_MoMA_artwork.ipynb
@@ -7644,6 +7644,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above I am turning the BeginDate and EndDate columns to intergets (floats) instead of objects."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
